--- a/Webpage/HTML_Pages/options.css
+++ b/Webpage/HTML_Pages/options.css
@@ -1,5 +1,5 @@
 body{
-    background-color: darkgreen;
+    background-color: rgb(115, 214, 165);
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -10,7 +10,7 @@ h1#title{
 }
 
 .content{
-    margin-left: 10px;
+    margin-left: 50px;
 }
 
 div#table{
@@ -19,6 +19,11 @@ div#table{
     height: auto;
     border: 1px solid black;
     padding: 0px;
+    margin-left: 10px;
+}
+
+h2{
+    font-size: 40px;
 }
 
 div.row{
